[package]
name = "matrix-ping"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-std = {version = "1.12.0", features = ["attributes", "tokio1"]}
futures = "0.3"
ureq = {version = "2.6", features = ["json"]}
surge-ping = "0.8.0"
serde = {version = "1.0", features = ["derive"]}

[profile.release]
lto = true
codegen-units = 1
